--- a/website/package.json
+++ b/website/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^19.0.0",
     "eslint": "latest",
     "eslint-config-next": "^15.0.0",
+    "firebase-tools": "^13.35.1",
     "typescript": "latest"
   }
 }
